--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-#data source
-spring.datasource.url=jdbc:mysql://localhost:3306/pizzeria
-spring.datasource.username=root
-spring.datasource.password=root
-
-## Hibernate Properties
+## Spring DATASOURCE
+spring.datasource.url = jdbc:mysql://localhost:3306/db_pizza
+spring.datasource.username = guybrush
+spring.datasource.password = code
+## Hibernate Properties 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB103Dialect
+# Hibernate ddl auto (create, create-drop, validate, update, none)
+spring.jpa.hibernate.ddl-auto = create
+#See sql queries(NOT RECCOMENDED!!!)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
